kd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: hocs-camunda-tools
  name: hocs-camunda-tools
spec:
  ports:
  - name: https
    port: 443
    targetPort: 10443 
  selector:
    name: hocs-camunda-tools
