kd/ingress-internal.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/enabled: "true"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: nginx-internal
    ingress.kubernetes.io/proxy-buffer-size: 128k
    ingress.kubernetes.io/server-snippets: |
      client_header_buffer_size     8k;
      large_client_header_buffers   4 128k;
  labels:
    # internal ingresses can't use http solvers as Let's Encrypt can't see it
    cert-manager.io/solver: route53
  name: hocs-camunda-tools-internal
spec:
  rules:
  - host: hocs-delta-camunda.internal.cs-notprod.homeoffice.gov.uk
    http:
      paths:
      - backend:
          serviceName: hocs-camunda-tools
          servicePort: 443
        path: /
  tls:
  - hosts:
    - hocs-delta-camunda.internal.cs-notprod.homeoffice.gov.uk
    secretName: hocs-camunda-tools-internal-tls-cert
